# RCAIDE_Deployment

./: .buildinfo  .coveragerc  .gitignore  CNAME  Manifest.in  README.md  README_PyPI.md  VERSION  api.html  appveyor.yml  contributing.html  coverage.xml  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  quick_start.html  readme.md  requirements.txt  search.html  searchindex.js  setup.py  version.md  version.py
.github/workflows/: CI.yml  bump-version.yml  publish_package.yml  sphinx_docs.yml
RCAIDE/: Vehicle.py  __init__.py
RCAIDE/Framework/: __init__.py
Regressions/: automatic_regression.py  test_automatic_regression.py
Regressions/Vehicles/: ATR_72.py  Boeing_737.py  Boeing_BWB_450.py  Cessna_172.py  Concorde.py  Electric_Twin_Otter.py  Embraer_190.py  Human_Powered_Glider.py  Lockheed_C5a.py  Lockheed_Martin_F22.py  NASA_X48.py  NASA_X57.py  Navion.py  Solar_UAV.py  Stopped_Rotor_EVTOL.py  Tiltwing_EVTOL.py
Tutorials/Missions/: Tutorial_01_turbofan_aircraft.ipynb
Tutorials/Performance/: Tutorial_23_aircraft_aerodynamic_analysis.ipynb  Tutorial_25_V_n_diagram.ipynb
_autosummary/: RCAIDE.Framework.Analyses.Aerodynamics.Aerodynamics.html  RCAIDE.Framework.Analyses.Aerodynamics.Athena_Vortex_Lattice.html  RCAIDE.Framework.Analyses.Aerodynamics.Vortex_Lattice_Method.html  RCAIDE.Framework.Analyses.Aerodynamics.html  RCAIDE.Framework.Analyses.Analysis.html  RCAIDE.Framework.Analyses.Atmospheric.Atmospheric.html  RCAIDE.Framework.Analyses.Atmospheric.Constant_Temperature.html  RCAIDE.Framework.Analyses.Atmospheric.US_Standard_1976.html  RCAIDE.Framework.Analyses.Atmospheric.html  RCAIDE.Framework.Analyses.Common.Process_Geometry.html  RCAIDE.Framework.Analyses.Common.html  RCAIDE.Framework.Analyses.Emissions.Emission_Index_CRN_Method.html  RCAIDE.Framework.Analyses.Emissions.Emission_Index_Correlation_Method.html  RCAIDE.Framework.Analyses.Emissions.Emissions.html  RCAIDE.Framework.Analyses.Emissions.html  RCAIDE.Framework.Analyses.Energy.Energy.html  RCAIDE.Framework.Analyses.Energy.html  RCAIDE.Framework.Analyses.Geodesics.Geodesics.Calculate_Distance.html  RCAIDE.Framework.Analyses.Geodesics.Geodesics.html  RCAIDE.Framework.Analyses.Geodesics.html  RCAIDE.Framework.Analyses.Noise.Correlation_Buildup.html  RCAIDE.Framework.Analyses.Noise.Frequency_Domain_Buildup.html  RCAIDE.Framework.Analyses.Noise.Noise.html  RCAIDE.Framework.Analyses.Noise.html  RCAIDE.Framework.Analyses.Planets.Earth.html  RCAIDE.Framework.Analyses.Planets.Planet.html  RCAIDE.Framework.Analyses.Planets.html  RCAIDE.Framework.Analyses.Process.html  RCAIDE.Framework.Analyses.Propulsion.Ducted_Fan_Design_Code.html  RCAIDE.Framework.Analyses.Propulsion.Momentum_Theory_Wake.html  RCAIDE.Framework.Analyses.Propulsion.html  RCAIDE.Framework.Analyses.Settings.html  RCAIDE.Framework.Analyses.Stability.Athena_Vortex_Lattice.html  RCAIDE.Framework.Analyses.Stability.Stability.html  RCAIDE.Framework.Analyses.Stability.Vortex_Lattice_Method.html  RCAIDE.Framework.Analyses.Stability.html  RCAIDE.Framework.Analyses.Vehicle.html  RCAIDE.Framework.Analyses.Weights.Weights.html  RCAIDE.Framework.Analyses.Weights.Weights_BWB.html  RCAIDE.Framework.Analyses.Weights.Weights_EVTOL.html  (+1231 more)
_modules/: index.html
_modules/RCAIDE/: Vehicle.html  load.html  save.html
_sources/_autosummary/: RCAIDE.Framework.Analyses.Aerodynamics.rst.txt  RCAIDE.Framework.Analyses.Atmospheric.Constant_Temperature.rst.txt  (+253 more)
tutorials/: missions.html  optimization.html  performance.html  tutorials.html
(+1681 files in other folders)
